# NetworkingWithC

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.c
logger/: logger.h
server/: CMakeLists.txt
server/inc/: server.h
server/src/: server.c
